# Flocked-and-Loaded

./: .gitignore  Cargo.toml  LICENCE.txt  README.md
.github/workflows/: release.yaml
assets/: axe.glb  bomb.glb  cage.glb  launcher.glb  sheep.glb  tree.glb
assets/music/: licences.txt
src/: asset_plugin.rs  chunk_manager_plugin.rs  debug_plugin.rs  follow_plugin.rs  game_plugin.rs  item_plugin.rs  main.rs  menu_plugin.rs  player_manager_plugin.rs  settings_plugin.rs  share.rs  sound_plugin.rs  templates.rs  tutorial_plugin.rs
